--- a/tools/docker/specs/centos/tensorflow/ssd-mobilenet-fp32-inference_spec.yml
+++ b/tools/docker/specs/centos/tensorflow/ssd-mobilenet-fp32-inference_spec.yml
@@ -6,6 +6,7 @@ slice_sets:
   ssd-mobilenet-fp32-inference:
   - add_to_name: -ssd-mobilenet-fp32-inference
     args:
+    - TENSORFLOW_IMAGE=intel/intel-optimized-tensorflow
     - PACKAGE_NAME=ssd-mobilenet-fp32-inference
     dockerfile_subdirectory: model_containers
     downloads:
@@ -47,6 +48,7 @@ slice_sets:
     - destination: quickstart
       source: quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32
     partials:
+    - numactl
     - model_package
     - entrypoint
     documentation:
@@ -78,3 +80,43 @@ slice_sets:
           uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/docker.md
         - name: License link
           uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/license.md
+      - name: README.md
+        uri: models/benchmarks/object_detection/tensorflow/ssd-mobilenet/inference/fp32
+        text_replace:
+          <model name>: SSD-MobileNet
+          <precision>: FP32
+          <mode>: inference
+          <use case>: object_detection
+          <workload container url>: https://software.intel.com/content/www/us/en/develop/articles/containers/ssd-mobilenet-fp32-inference-tensorflow-container.html
+        docs:
+        - name: Title
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/description.md
+        - name: Datasets
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/quickstart.md
+        - name: AI Kit
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/aikit.md
+        - name: Resources
+          uri: models/quickstart/common/.docs/resources_with_portal_link.md
+      - docs:
+        - name: Title
+          uri: models/quickstart/common/.docs/advanced/title.md
+        - name: Description
+          uri: models/quickstart/common/.docs/advanced/description.md
+        - name: Setup
+          uri: models/quickstart/common/.docs/advanced/setup.md
+        - name: Docker arg
+          uri: models/quickstart/common/.docs/advanced/docker_arg.md
+        - name: Launch benchmark instructions
+          uri: models/benchmarks/object_detection/tensorflow/ssd-mobilenet/inference/fp32/.docs/advanced/launch_benchmark_instructions.md
+        name: Advanced.md
+        text_replace:
+          <model name>: SSD-MobileNet
+          <precision>: FP32
+          <mode>: inference
+          <use case>: object_detection
+          <docker image>: 'intel/intel-optimized-tensorflow:latest'
+        uri: models/benchmarks/object_detection/tensorflow/ssd-mobilenet/inference/fp32
