--- a/tools/docker/specs/centos/tensorflow/ssd-resnet34-int8-inference_spec.yml
+++ b/tools/docker/specs/centos/tensorflow/ssd-resnet34-int8-inference_spec.yml
@@ -6,6 +6,7 @@ slice_sets:
   ssd-resnet34-int8-inference:
   - add_to_name: -ssd-resnet34-int8-inference
     args:
+    - TENSORFLOW_IMAGE=intel/intel-optimized-tensorflow
     - PACKAGE_NAME=ssd-resnet34-int8-inference
     - CODE_DIR=/workspace/tf_models
     - TF_MODELS_BRANCH=f505cecde2d8ebf6fe15f40fb8bc350b2b1ed5dc
@@ -41,6 +42,46 @@ slice_sets:
           <precision>: Int8
           <use case>: object_detection
         uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/int8
+      - docs:
+        - name: Title
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/int8/.docs/title.md
+        - name: Description
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/int8/.docs/description.md
+        - name: Datasets
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/int8/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/int8/.docs/quickstart.md
+        - name: AI Kit
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/int8/.docs/aikit.md
+        - name: Resources
+          uri: models/quickstart/common/.docs/resources_with_portal_link.md
+        name: README.md
+        text_replace:
+          <mode>: inference
+          <model name>: SSD-ResNet34
+          <precision>: Int8
+          <use case>: object_detection
+          <workload container url>: https://software.intel.com/content/www/us/en/develop/articles/containers/ssd-resnet34-int8-inference-tensorflow-container.html
+        uri: models/benchmarks/object_detection/tensorflow/ssd-resnet34/inference/int8
+      - docs:
+        - name: Title
+          uri: models/quickstart/common/.docs/advanced/title.md
+        - name: Description
+          uri: models/quickstart/common/.docs/advanced/description.md
+        - name: Setup
+          uri: models/quickstart/common/.docs/advanced/setup.md
+        - name: Docker arg
+          uri: models/quickstart/common/.docs/advanced/docker_arg.md
+        - name: Launch benchmark instructions
+          uri: models/benchmarks/object_detection/tensorflow/ssd-resnet34/inference/int8/.docs/advanced/launch_benchmark_instructions.md
+        name: Advanced.md
+        text_replace:
+          <mode>: inference
+          <model name>: SSD-ResNet34
+          <precision>: Int8
+          <use case>: object_detection
+          <docker image>: 'intel/intel-optimized-tensorflow:latest'
+        uri: models/benchmarks/object_detection/tensorflow/ssd-resnet34/inference/int8
     downloads:
     - source: https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/ssd_resnet34_int8_bs1_pretrained_model.pb
       destination: pretrained_models/ssd_resnet34_int8_bs1_pretrained_model.pb
@@ -71,6 +112,8 @@ slice_sets:
       source: models/object_detection/tensorflow/ssd-resnet34/inference/tensorflow_benchmarks_tf2.0.patch
     - destination: models/object_detection/tensorflow/ssd-resnet34/inference/tensorflow_models_tf2.0.patch
       source: models/object_detection/tensorflow/ssd-resnet34/inference/tensorflow_models_tf2.0.patch
+    - destination: models/object_detection/tensorflow/ssd-resnet34/inference/tf_benchmarks.patch
+      source: models/object_detection/tensorflow/ssd-resnet34/inference/tf_benchmarks.patch
     - destination: quickstart/common
       source: quickstart/common
     - destination: quickstart
