PyTorch/IPEX base container updates for SPR (#100)
* PyTorch SPR dockerfile optimizations

* Fix --from

* Install git

* Add build tools

* regenerate dockerfiles

* update partials and regenerate dockerfiles

* Documentation updates

* Regenerate docs and dockerfiles after syncing with develop

* Add build utils

* Adding build tools for ssdresnet34 training

* limit directories for ssd34 packages

--- a/tools/docker/specs/centos/pytorch/spr-maskrcnn-inference_spec.yml
+++ b/tools/docker/specs/centos/pytorch/spr-maskrcnn-inference_spec.yml
@@ -12,6 +12,7 @@ slice_sets:
         - PACKAGE_NAME=pytorch-spr-maskrcnn-inference
         - MASKRCNN_DIR=/workspace/pytorch-spr-maskrcnn-inference/models/maskrcnn
       partials:
+        - pytorch/gcc-and-utils
         - pytorch/torch-vision-from-source
         - pytorch/spr-model-installs
         - model_package
