--- a/tools/docker/specs/centos/pytorch/pytorch-ipex-spr_spec.yml
+++ b/tools/docker/specs/centos/pytorch/pytorch-ipex-spr_spec.yml
@@ -17,6 +17,7 @@ slice_sets:
         - pytorch/prep-conda-env
         - pytorch/install-pytorch-ipex-wheels
         - pytorch/jemalloc
+        - pytorch/spr-base-release-conda-env
       wrapper_package_files:
         - source: quickstart/spr_base/pytorch/build.sh
           destination: build.sh
