--- a/tools/docker/specs/centos/pytorch/spr-bert-large-inference_spec.yml
+++ b/tools/docker/specs/centos/pytorch/spr-bert-large-inference_spec.yml
@@ -18,7 +18,7 @@ slice_sets:
         - pytorch/models/bert-inference-dependencies
         - pytorch/spr-release-conda-env
         - pytorch/spr-dnnl-max-var
-        - pytorch/spr-entrypoint
+        - pytorch/jemalloc-entrypoint
       files:
         - source: tools/docker/models/cpu-models/bert-ww32
           destination: models/bert
