PyTorch SPR BERT container update to switch from jemalloc to tcmalloc (#116)
* Update BERT PyTorch SPR dockerfiles to use tcmalloc and remove extra installs

* Add back utils

* add back spr installs

* Update to remove spr installs

* Switch from llvm-openmp to intel-openmp

--- a/tools/docker/specs/centos/pytorch/spr-bert-large-inference_spec.yml
+++ b/tools/docker/specs/centos/pytorch/spr-bert-large-inference_spec.yml
@@ -13,12 +13,12 @@ slice_sets:
         - BERT_DIR=/workspace/pytorch-spr-bert-large-inference/models/bert
       partials:
         - pytorch/gcc-and-utils
-        - pytorch/spr-model-installs
+        - pytorch/tcmalloc
         - model_package
         - pytorch/models/bert-inference-dependencies
         - pytorch/spr-release-conda-env
         - pytorch/spr-dnnl-max-var
-        - pytorch/jemalloc-entrypoint
+        - pytorch/tcmalloc-entrypoint
       files:
         - source: tools/docker/models/cpu-models/bert-ww32
           destination: models/bert
