--- a/tools/docker/specs/centos/pytorch/spr-bert-large-training_spec.yml
+++ b/tools/docker/specs/centos/pytorch/spr-bert-large-training_spec.yml
@@ -13,12 +13,12 @@ slice_sets:
         - BERT_DIR=/workspace/pytorch-spr-bert-large-training/models/bert/bert
       partials:
         - pytorch/gcc-and-utils
-        - pytorch/spr-model-installs
+        - pytorch/tcmalloc
         - model_package
         - pytorch/models/bert-training-dependencies
         - pytorch/spr-release-conda-env
         - pytorch/spr-dnnl-max-var
-        - pytorch/jemalloc-entrypoint
+        - pytorch/tcmalloc-entrypoint
       files:
         - source: tools/docker/models/cpu-models/bert_pre_train-ww32
           destination: models/bert_pre_train
