--- a/tools/docker/specs/centos/tensorflow/spr-resnet50v1-5-inference_spec.yml
+++ b/tools/docker/specs/centos/tensorflow/spr-resnet50v1-5-inference_spec.yml
@@ -32,6 +32,8 @@ slice_sets:
           source: benchmarks/image_recognition/tensorflow/resnet50v1_5/inference
         - destination: benchmarks/launch_benchmark.py
           source: benchmarks/launch_benchmark.py
+        - source: quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/inference_realtime_weightsharing.sh
+          destination: quickstart/inference_realtime_weightsharing.sh
         - source: quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/inference_realtime.sh
           destination: quickstart/inference_realtime.sh
         - source: quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/inference_throughput.sh
