Add BERT Large pretraining container package (TF-SPR) (#119)
* add bert large pretraining container package and fix base container dependencies version

--- a/tools/docker/specs/centos/tensorflow/spr-resnet50v1-5-training_spec.yml
+++ b/tools/docker/specs/centos/tensorflow/spr-resnet50v1-5-training_spec.yml
@@ -12,12 +12,13 @@ slice_sets:
         - TENSORFLOW_TAG=tensorflow-spr
       partials:
         - tensorflow/tensorflow-base
-        - model_package
-        - numactl
         - python-build
         - gcc-8
-        - openmpi-2.1.1-8
+        - openmpi-4.1.0
+        - openssh
         - horovod
+        - model_package
+        - numactl
         - entrypoint
       files:
         - source: benchmarks/common
