--- a/tools/docker/specs/centos/pytorch/pytorch-ipex-spr_spec.yml
+++ b/tools/docker/specs/centos/pytorch/pytorch-ipex-spr_spec.yml
@@ -7,8 +7,8 @@ slice_sets:
     - add_to_name: pytorch-ipex-spr
       dockerfile_subdirectory: pytorch
       args:
-        - PYTORCH_WHEEL=torch-1.10.0a0+git6f40371-cp37-cp37m-linux_x86_64.whl
-        - IPEX_WHEEL=torch_ipex-1.1.0-cp37-cp37m-linux_x86_64.whl
+        - PYTORCH_WHEEL=torch-1.10.0a0+git32a4642-cp37-cp37m-linux_x86_64.whl
+        - IPEX_WHEEL=intel_extension_for_pytorch-0.0.0-cp37-cp37m-linux_x86_64.whl
         - PACKAGE_NAME=pytorch-ipex-spr
       partials:
         - centos8.3.2011-base
