--- a/tools/docker/specs/centos/tensorflow/tensorflow-spr-3dunet_spec.yml
+++ b/tools/docker/specs/centos/tensorflow/tensorflow-spr-3dunet_spec.yml
@@ -1,31 +1,31 @@
 releases:
   versioned:
     tag_specs:
-    - '{tensorflow-spr}'
+    - '{tensorflow-spr-3dunet}'
 slice_sets:
-  tensorflow-spr:
-    - add_to_name: tensorflow-spr
+  tensorflow-spr-3dunet:
+    - add_to_name: tensorflow-spr-3dunet
       dockerfile_subdirectory: tensorflow-spr
       args:
-        - TENSORFLOW_WHEEL=tf_nightly-2.7.0.202142-cp36-cp36m-linux_x86_64.whl
-        - PACKAGE_NAME=tensorflow-spr
+        - TENSORFLOW_WHEEL=tf_nightly-2.7.0.202140-cp36-cp36m-linux_x86_64.whl
+        - PACKAGE_NAME=tensorflow-spr-3dunet
       partials:
         - centos8-base
         - tensorflow/spr-dnnl-max-var
         - tensorflow/spr-mkl-native-format-var
-        - tensorflow/tf-installs
+        - tensorflow/tf-spr-3dunet-whl
       files:
-        - source: quickstart/spr_base/tensorflow/build.sh
+        - source: quickstart/spr_base/tensorflow/build_3dunet_base.sh
           destination: build.sh
-        - source: dockerfiles/tensorflow-spr/tensorflow-spr.Dockerfile
-          destination: tensorflow-spr.Dockerfile
+        - source: dockerfiles/tensorflow-spr/tensorflow-spr-3dunet.Dockerfile
+          destination: tensorflow-spr-3dunet.Dockerfile
         - source: tools/docker/whls
           destination: whls
         - source: LICENSE
           destination: licenses/LICENSE
         - source: third_party
           destination: licenses/third_party
-        - source: quickstart/spr_base/tensorflow/README.md
+        - source: quickstart/spr_base/tensorflow/3dunet_base_README.md
           destination: README.md
       documentation:
         - docs:
@@ -39,10 +39,10 @@ slice_sets:
             uri: models/quickstart/spr_base/tensorflow/.docs/docker.md
           - name: License
             uri: models/quickstart/spr_base/tensorflow/.docs/license.md
-          name: README.md
+          name: 3dunet_base_README.md
           text_replace:
-            <package name>: tensorflow-spr.tar.gz
-            <package dir>: tensorflow-spr
-            <docker image>: model-zoo:tensorflow-spr
-            <wheel name>: "tf_nightly-2.7.0.202142-cp36-cp36m-linux_x86_64.whl"
+            <package name>: tensorflow-spr-3dunet.tar.gz
+            <package dir>: tensorflow-spr-3dunet
+            <docker image>: model-zoo:tensorflow-spr-3dunet
+            <wheel name>: "tf_nightly-2.7.0.202140-cp36-cp36m-linux_x86_64.whl"
           uri: models/quickstart/spr_base/tensorflow
