Fixed TFX pipeline  (#219)
* Update Python to version 3.7

* added specs for python 3.7

* add specs for python 3.8

* Updated to use tensorflow base

* fixed order of tensorflow base image and update python

* fixed remove tensorflow-cpu; tfx install

* Fixed Cuda tfx pipeline

* removed tfx dockerfiles since they are only used for nightly testing

* streamline uninstall

* Removed unused python partials

--- a/tools/docker/specs/tensorflow/nightly-tf-tfx-cuda_spec.yml
+++ b/tools/docker/specs/tensorflow/nightly-tf-tfx-cuda_spec.yml
@@ -10,15 +10,9 @@ slice_sets:
           dockerfile_exclusive_name: "nightly-tf-tfx-cuda"
           dockerfile_subdirectory: "tfx"
           partials:
-               - ubuntu-base
-               - python-3.6
+               - tensorflow/google-tensorflow-base
                - python3-pip
-               - common
-               - python-build
-               - tensorflow/tfx-install
                - tensorflow/uninstall-google-tensorflow
+               - tensorflow/tfx-install
                - tensorflow/nightly-tf-cuda
                - tensorflow/dependencies-for-tfx-examples
-          args:
-               - UBUNTU_VERSION=20.04
-               - PY_VERSION=3.6
