--- a/tools/docker/specs/centos/pytorch/spr-maskrcnn-training_spec.yml
+++ b/tools/docker/specs/centos/pytorch/spr-maskrcnn-training_spec.yml
@@ -11,6 +11,7 @@ slice_sets:
         - PYTORCH_TAG=pytorch-ipex-spr
         - PACKAGE_NAME=pytorch-spr-maskrcnn-training
         - MASKRCNN_DIR=/workspace/pytorch-spr-maskrcnn-training/models/maskrcnn
+        - TORCHVISION_VERSION=81fe60cc258f49ccfb0f9f32d78b4825754cff7b
       partials:
         - pytorch/gcc-and-utils
         - pytorch/torch-vision-from-source
