--- a/tools/docker/specs/centos/pytorch/spr-rnnt-inference_spec.yml
+++ b/tools/docker/specs/centos/pytorch/spr-rnnt-inference_spec.yml
@@ -11,6 +11,7 @@ slice_sets:
         - PYTORCH_TAG=pytorch-ipex-spr
         - PACKAGE_NAME=pytorch-spr-rnnt-inference
         - RNNT_DIR=/workspace/pytorch-spr-rnnt-inference/models/rnnt
+        - TORCHVISION_VERSION=81fe60cc258f49ccfb0f9f32d78b4825754cff7b
       partials:
         - pytorch/gcc-and-utils
         - pytorch/torch-vision-from-source
