--- a/tools/docker/specs/centos/pytorch/spr-resnet50-inference_spec.yml
+++ b/tools/docker/specs/centos/pytorch/spr-resnet50-inference_spec.yml
@@ -20,8 +20,8 @@ slice_sets:
         - pytorch/spr-dnnl-max-var
         - pytorch/jemalloc-libiomp5-entrypoint
       files:
-        - source: tools/docker/models/cpu-models/resnet
-          destination: models/resnet50
+        - source: models/image_recognition/pytorch/common
+          destination: models/image_recognition/pytorch/common
         - source: quickstart/image_recognition/pytorch/resnet50/inference/cpu/inference_realtime.sh
           destination: quickstart/inference_realtime.sh
         - source: quickstart/image_recognition/pytorch/resnet50/inference/cpu/inference_throughput.sh
