--- a/tools/docker/specs/centos/pytorch/spr-resnet50-training_spec.yml
+++ b/tools/docker/specs/centos/pytorch/spr-resnet50-training_spec.yml
@@ -20,8 +20,8 @@ slice_sets:
         - pytorch/spr-dnnl-max-var
         - pytorch/jemalloc-libiomp5-entrypoint
       files:
-        - source: tools/docker/models/cpu-models/resnet
-          destination: models/resnet50
+        - source: models/image_recognition/pytorch/common
+          destination: models/image_recognition/pytorch/common
         - source: quickstart/image_recognition/pytorch/resnet50/training/cpu/training.sh
           destination: quickstart/training.sh
       wrapper_package_files:
