--- a/tools/docker/specs/centos/pytorch/spr-ssd-resnet34-training_spec.yml
+++ b/tools/docker/specs/centos/pytorch/spr-ssd-resnet34-training_spec.yml
@@ -20,12 +20,12 @@ slice_sets:
         - pytorch/spr-dnnl-max-var
         - pytorch/jemalloc-libiomp5-entrypoint
       files:
-        - source: tools/docker/models/cpu-models/ssd-training/training/single_stage_detector/ssd
-          destination: models/ssd-training/training/single_stage_detector/ssd
-        - source: quickstart/object_detection/pytorch/ssd-resnet34/training/cpu/train_performance.sh
-          destination: quickstart/train_performance.sh
-        - source: quickstart/object_detection/pytorch/ssd-resnet34/training/cpu/train_accuracy.sh
-          destination: quickstart/train_accuracy.sh
+        - source: models/object_detection/pytorch/ssd-resnet34/training/cpu
+          destination: models/object_detection/pytorch/ssd-resnet34/training/cpu
+        - source: quickstart/object_detection/pytorch/ssd-resnet34/training/cpu/throughput.sh
+          destination: quickstart/throughput.sh
+        - source: quickstart/object_detection/pytorch/ssd-resnet34/training/cpu/accuracy.sh
+          destination: quickstart/accuracy.sh
       wrapper_package_files:
         - source: output/pytorch-spr-ssd-resnet34-training.tar.gz
           destination: model_packages/pytorch-spr-ssd-resnet34-training.tar.gz
@@ -33,6 +33,10 @@ slice_sets:
           destination: build.sh
         - source: quickstart/object_detection/pytorch/ssd-resnet34/training/cpu/run.sh
           destination: run.sh
+        - source: quickstart/object_detection/pytorch/ssd-resnet34/training/cpu/download_dataset.sh
+          destination: download_dataset.sh
+        - source: quickstart/object_detection/pytorch/ssd-resnet34/training/cpu/download_model.sh
+          destination: download_model.sh
         - source: dockerfiles/pytorch/pytorch-spr-ssd-resnet34-training.Dockerfile
           destination: pytorch-spr-ssd-resnet34-training.Dockerfile
         - source: LICENSE
