--- a/tools/docker/specs/centos/pytorch/spr-rnnt-training_spec.yml
+++ b/tools/docker/specs/centos/pytorch/spr-rnnt-training_spec.yml
@@ -10,7 +10,6 @@ slice_sets:
         - PYTORCH_IMAGE=model-zoo
         - PYTORCH_TAG=pytorch-ipex-spr
         - PACKAGE_NAME=pytorch-spr-rnnt-training
-        - RNNT_DIR=/workspace/pytorch-spr-rnnt-training/models/rnnt-training
         - TORCHVISION_VERSION=81fe60cc258f49ccfb0f9f32d78b4825754cff7b
       partials:
         - pytorch/gcc-and-utils
@@ -21,12 +20,12 @@ slice_sets:
         - pytorch/spr-dnnl-max-var
         - pytorch/jemalloc-libiomp5-entrypoint
       files:
-        - source: tools/docker/models/cpu-models/rnnt-training
-          destination: models/rnnt-training
+        - source: models/language_modeling/pytorch/rnnt/training/cpu
+          destination: models/language_modeling/pytorch/rnnt/training/cpu
         - source: quickstart/language_modeling/pytorch/rnnt/training/cpu/training.sh
           destination: quickstart/training.sh
-        - source: quickstart/language_modeling/pytorch/rnnt/training/cpu/download_training_dataset.sh
-          destination: quickstart/download_training_dataset.sh
+        - source: quickstart/language_modeling/pytorch/rnnt/training/cpu/download_dataset.sh
+          destination: quickstart/download_dataset.sh
       wrapper_package_files:
         - source: output/pytorch-spr-rnnt-training.tar.gz
           destination: model_packages/pytorch-spr-rnnt-training.tar.gz
