--- a/tools/docker/specs/centos/pytorch/spr-maskrcnn-training_spec.yml
+++ b/tools/docker/specs/centos/pytorch/spr-maskrcnn-training_spec.yml
@@ -10,7 +10,6 @@ slice_sets:
         - PYTORCH_IMAGE=model-zoo
         - PYTORCH_TAG=pytorch-ipex-spr
         - PACKAGE_NAME=pytorch-spr-maskrcnn-training
-        - MASKRCNN_DIR=/workspace/pytorch-spr-maskrcnn-training/models/maskrcnn
         - TORCHVISION_VERSION=81fe60cc258f49ccfb0f9f32d78b4825754cff7b
       partials:
         - pytorch/gcc-and-utils
@@ -22,43 +21,45 @@ slice_sets:
         - pytorch/spr-dnnl-max-var
         - pytorch/jemalloc-libiomp5-entrypoint
       files:
-        - source: tools/docker/models/cpu-models/maskrcnn
-          destination: models/maskrcnn
-        - source: quickstart/image_segmentation/pytorch/maskrcnn/training/cpu/training.sh
+        - source: models/object_detection/pytorch/maskrcnn
+          destination: models/object_detection/pytorch/maskrcnn
+        - source: quickstart/object_detection/pytorch/maskrcnn/training/cpu/training.sh
           destination: quickstart/training.sh
       wrapper_package_files:
         - source: output/pytorch-spr-maskrcnn-training.tar.gz
           destination: model_packages/pytorch-spr-maskrcnn-training.tar.gz
-        - source: quickstart/image_segmentation/pytorch/maskrcnn/training/cpu/build.sh
+        - source: quickstart/object_detection/pytorch/maskrcnn/training/cpu/build.sh
           destination: build.sh
-        - source: quickstart/image_segmentation/pytorch/maskrcnn/training/cpu/run.sh
+        - source: quickstart/object_detection/pytorch/maskrcnn/training/cpu/run.sh
           destination: run.sh
+        - source: quickstart/object_detection/pytorch/maskrcnn/training/cpu/download_dataset.sh
+          destination: download_dataset.sh
         - source: dockerfiles/pytorch/pytorch-spr-maskrcnn-training.Dockerfile
           destination: pytorch-spr-maskrcnn-training.Dockerfile
         - source: LICENSE
           destination: licenses/LICENSE
         - source: third_party
           destination: licenses/third_party
-        - source: quickstart/image_segmentation/pytorch/maskrcnn/training/cpu/README_SPR.md
+        - source: quickstart/object_detection/pytorch/maskrcnn/training/cpu/README_SPR.md
           destination: README.md
       documentation:
         - docs:
           - name: Title
-            uri: models/quickstart/image_segmentation/pytorch/maskrcnn/training/cpu/.docs/title.md
+            uri: models/quickstart/object_detection/pytorch/maskrcnn/training/cpu/.docs/title.md
           - name: Description
-            uri: models/quickstart/image_segmentation/pytorch/maskrcnn/training/cpu/.docs/description.md
+            uri: models/quickstart/object_detection/pytorch/maskrcnn/training/cpu/.docs/description.md
           - name: Model Package
-            uri: models/quickstart/image_segmentation/pytorch/maskrcnn/training/cpu/.docs/wrapper_package.md
+            uri: models/quickstart/object_detection/pytorch/maskrcnn/training/cpu/.docs/wrapper_package.md
           - name: Quickstart
-            uri: models/quickstart/image_segmentation/pytorch/maskrcnn/training/cpu/.docs/quickstart.md
+            uri: models/quickstart/object_detection/pytorch/maskrcnn/training/cpu/.docs/quickstart.md
           - name: Datasets
-            uri: models/quickstart/image_segmentation/pytorch/maskrcnn/training/cpu/.docs/datasets.md
+            uri: models/quickstart/object_detection/pytorch/maskrcnn/training/cpu/.docs/datasets.md
           - name: Container build
-            uri: models/quickstart/image_segmentation/pytorch/maskrcnn/training/cpu/.docs/container_build.md
+            uri: models/quickstart/object_detection/pytorch/maskrcnn/training/cpu/.docs/container_build.md
           - name: Docker
-            uri: models/quickstart/image_segmentation/pytorch/maskrcnn/training/cpu/.docs/docker_spr.md
+            uri: models/quickstart/object_detection/pytorch/maskrcnn/training/cpu/.docs/docker_spr.md
           - name: License
-            uri: models/quickstart/image_segmentation/pytorch/maskrcnn/training/cpu/.docs/license.md
+            uri: models/quickstart/object_detection/pytorch/maskrcnn/training/cpu/.docs/license.md
           name: README_SPR.md
           text_replace:
             <model name>: Mask R-CNN
@@ -66,4 +67,4 @@ slice_sets:
             <package name>: pytorch-spr-maskrcnn-training.tar.gz
             <package dir>: pytorch-spr-maskrcnn-training
             <docker image>: model-zoo:pytorch-spr-maskrcnn-training
-          uri: models/quickstart/image_segmentation/pytorch/maskrcnn/training/cpu
+          uri: models/quickstart/object_detection/pytorch/maskrcnn/training/cpu
