--- a/benchmarks/reinforcement/tensorflow/minigo/requirements.txt
+++ b/benchmarks/reinforcement/tensorflow/minigo/requirements.txt
@@ -15,6 +15,6 @@ setuptools>=34.0.0
 
 oauth2client==4.1
 
-horovod==0.15.1
+horovod
 
 rsa>=4.7 # not directly required, pinned by Snyk to avoid a vulnerability
