Add numactl partial to wide and deep (#396)
Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

--- a/tools/docker/specs/tensorflow/wide-deep-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/wide-deep-fp32-inference_spec.yml
@@ -39,6 +39,7 @@ slice_sets:
     - destination: quickstart
       source: quickstart/recommendation/tensorflow/wide_deep/inference/cpu/fp32
     partials:
+    - numactl
     - tensorflow/model-source
     - model_package
     - tar
