Fix tcmalloc path to set LD_PRELOAD (#388)
* Fix tcmalloc.so path

* Formatting

* Removing debug messages

* Unit test update

* Test updates

* Add tcmalloc to the int8 dockerfiles

* Removing files we don't need

--- a/tools/docker/specs/tensorflow/bert-large-int8-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/bert-large-int8-inference_spec.yml
@@ -107,5 +107,6 @@ slice_sets:
       source: quickstart/language_modeling/tensorflow/bert_large/inference/cpu/int8
     partials:
     - unzip
+    - tcmalloc
     - model_package
     - entrypoint
