--- a/tools/docker/specs/tensorflow/inceptionv3-int8-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/inceptionv3-int8-inference_spec.yml
@@ -106,5 +106,6 @@ slice_sets:
     - destination: quickstart
       source: quickstart/image_recognition/tensorflow/inceptionv3/inference/cpu/int8
     partials:
+    - tcmalloc
     - model_package
     - entrypoint
