--- a/tools/docker/specs/tensorflow/ssd-mobilenet-int8-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/ssd-mobilenet-int8-inference_spec.yml
@@ -118,5 +118,6 @@ slice_sets:
       source: quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/int8
     partials:
     - numactl
+    - tcmalloc
     - model_package
     - entrypoint
