--- a/tools/docker/specs/tensorflow/resnet50-int8-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/resnet50-int8-inference_spec.yml
@@ -108,5 +108,6 @@ slice_sets:
     - destination: quickstart
       source: quickstart/image_recognition/tensorflow/resnet50/inference/cpu/int8
     partials:
+    - tcmalloc
     - model_package
     - entrypoint
