SPR updates for WW12, 2022 (#492)
* SPR updates for WW12, 2022

Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

* Update for PyTorch SPR WW2022-12

Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

* Update pytorch base for SPR too

Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

* Stick with specific 'keras-nightly' version

Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

* Updates per code review

Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

--- a/tools/docker/specs/centos/pytorch/pytorch-ipex-spr_spec.yml
+++ b/tools/docker/specs/centos/pytorch/pytorch-ipex-spr_spec.yml
@@ -7,11 +7,11 @@ slice_sets:
     - add_to_name: pytorch-ipex-spr
       dockerfile_subdirectory: pytorch
       args:
-        - PYTORCH_WHEEL=torch-1.11.0a0+gita8a0090-cp37-cp37m-linux_x86_64.whl
-        - IPEX_WHEEL=intel_extension_for_pytorch-1.10.0+cpu-cp37-cp37m-linux_x86_64.whl
+        - PYTORCH_WHEEL=torch-1.12.0a0+git42f4993-cp37-cp37m-linux_x86_64.whl
+        - IPEX_WHEEL=intel_extension_for_pytorch-1.12.0+cpu-cp37-cp37m-linux_x86_64.whl
         - PACKAGE_NAME=pytorch-ipex-spr
       partials:
-        - centos8.3.2011-base
+        - centos-stream8-base
         - unzip
         - pytorch/centos-intel-base-installs
         - pytorch/prep-conda-env
