--- a/tools/docker/specs/centos/tensorflow/tensorflow-spr_spec.yml
+++ b/tools/docker/specs/centos/tensorflow/tensorflow-spr_spec.yml
@@ -7,10 +7,11 @@ slice_sets:
     - add_to_name: tensorflow-spr
       dockerfile_subdirectory: tensorflow-spr
       args:
-        - TENSORFLOW_WHEEL=tf_nightly-2.7.0.202142-cp36-cp36m-linux_x86_64.whl
+        - TF_WHEEL=tf_nightly-2.9.0.202212-cp38-cp38-linux_x86_64.whl
         - PACKAGE_NAME=tensorflow-spr
+        - PY_VER=38
       partials:
-        - centos8-base
+        - centos-stream8-base
         - tensorflow/spr-dnnl-max-var
         - tensorflow/spr-mkl-native-format-var
         - tensorflow/tf-installs
